# RPCC

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cicd/: set_vars.sh  zip_artifacts.sh
src/: args.rs  compressor.rs  main.rs  tests.rs  utils.rs  zip.rs  zstd.rs
